# fileman

./: Cargo.toml
fileman/: Cargo.toml
fileman/src/: app.rs  main.rs  menus.rs  navigation.rs  operations.rs  sidebar.rs  toolbar.rs  window.rs
nptk-fileman-widgets/: Cargo.toml
nptk-fileman-widgets/examples/file_list/: Cargo.toml
nptk-fileman-widgets/examples/file_list/src/: main.rs
nptk-fileman-widgets/src/: file_list.rs  fileman_sidebar.rs  lib.rs  location_bar.rs  status_bar.rs
nptk-fileman-widgets/src/file_list/: actions.rs  model_adapter.rs  properties.rs  view_compact.rs  view_icon.rs  view_list.rs
src/: lib.rs
