[package]
name = "fileman"
version = "0.0.1"
edition.workspace = true
authors.workspace = true
repository.workspace = true
license = "GPL-3.0"

[dependencies]
npio = { workspace = true }
nptk = { workspace = true }
nptk-fileman-widgets = { workspace = true }
tokio = { workspace = true }
log = { workspace = true }
smol = { workspace = true }
async-trait = { workspace = true }
env_logger = "0.11"
